--- a/.github/workflows/lamp.yml
+++ b/.github/workflows/lamp.yml
@@ -20,4 +20,4 @@ jobs:
        uses: actions/checkout@v2
 
      - name: Build
-       run: GOOS=linux GOARCH=386 go build -mod=vendor
+       run: GOARCH=386 go build -mod=vendor
