--- a/.github/workflows/lamp.yml
+++ b/.github/workflows/lamp.yml
@@ -19,8 +19,11 @@ jobs:
      - name: Check out code into the Go module directory
        uses: actions/checkout@v2
 
-     - name: Build
-       run: |
-        GOOS=darwin GOARCH=amd64 go build -mod=vendor -o opsgenie-lamp-mac
-        GOOS=linux GOARCH=386 go build -mod=vendor
-        GOOS=windows GOARCH=386 go build -mod=vendor
+     - name: Build for MacOS
+       run: GOOS=darwin GOARCH=amd64 go build -mod=vendor -o opsgenie-lamp-mac
+     
+     - name: Build for Linux
+       run: GOOS=linux GOARCH=386 go build -mod=vendor
+     
+     - name: Build for Windows
+       run: GOOS=windows GOARCH=386 go build -mod=vendor
