--- a/.github/workflows/lamp.yml
+++ b/.github/workflows/lamp.yml
@@ -18,6 +18,9 @@ jobs:
 
      - name: Check out code into the Go module directory
        uses: actions/checkout@v2
+     
+     - name: Execute shell cmd
+       run: echo pwd is $(pwd)
 
      - name: Build for MacOS
        run: GOOS=darwin GOARCH=amd64 go build -mod=vendor -o opsgenie-lamp-mac
