--- a/.github/workflows/lamp.yml
+++ b/.github/workflows/lamp.yml
@@ -2,7 +2,8 @@ name: lamp
 
 on:
  push:
-    branches: [ master ]
+  tags:
+   - lamp.v1.*
 
 jobs:
   build:
@@ -28,8 +29,11 @@ jobs:
      - name: Build for Windows
        run: GOOS=windows GOARCH=386 go build -mod=vendor -o opsgenie-lamp-win
      
-     - name: zip the artifact
-       run: zip -r lamp.zip opsgenie-lamp-* LICENSE NOTICE conf
+     - name: zip the various artifact
+       run: |
+         zip -r lamp_mac.zip opsgenie-lamp-mac LICENSE NOTICE conf
+         zip -r lamp_lin.zip opsgenie-lamp-lin LICENSE NOTICE conf
+         zip -r lamp_win.zip opsgenie-lamp-win LICENSE NOTICE conf
      
      - name: Create Release
        id: create_release
@@ -48,6 +52,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: lamp.zip
-          asset_name: lamp.zip
+          asset_path: lamp_*.zip
+          asset_name: lamp_*.zip
           asset_content_type: application/zip
