different steps for various uploads

--- a/.github/workflows/lamp.yml
+++ b/.github/workflows/lamp.yml
@@ -46,12 +46,33 @@ jobs:
           draft: false
           prerelease: false
           
-     - name: Upload Release Asset
+     - name: Upload mac zip
        uses: actions/upload-release-asset@v1
        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
        with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: lamp_*.zip
-          asset_name: lamp_*.zip
+          asset_path: lamp_mac.zip
+          asset_name: lamp_mac.zip
+          asset_content_type: application/zip
+          
+     - name: Upload lin zip
+       uses: actions/upload-release-asset@v1
+       env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: lamp_lin.zip
+          asset_name: lamp_lin.zip
+          asset_content_type: application/zip
+          
+                    
+     - name: Upload win zip
+       uses: actions/upload-release-asset@v1
+       env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: lamp_win.zip
+          asset_name: lamp_win.zip
           asset_content_type: application/zip
